# rscuboids

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml
src/: assets.rs  cuboids.rs  lib.rs  main.rs  physics_events.rs  physics_object_spawner.rs  scoring.rs  ship.rs  trap.rs  ui.rs  world.rs
