[package]
name = "rscuboids"
version = "0.1.0"
authors = ["matek_a@outlook.com"]
edition = "2018"
description = "Asteroids clone written in Rust"
repository = "https://github.com/mateka/rscuboids"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.4.0"
