[package]
name = "rscuboids"
version = "0.1.0"
authors = ["Mateusz Adamczyk <matek_a@outlook.com>"]
edition = "2021"
description = "Asteroids clone written in Rust"
repository = "https://github.com/mateka/rscuboids"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6.1"
bevy_rapier2d = {version="0.12.1", features=["parallel"]}
rand = "0.8.5"
